# kalman-filter-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  codebase-review-report.md  tarpaulin-report.html
PRPs/: 00-constructor-builder-refactor.md  01-comprehensive-documentation.md  02-performance-benchmarks.md  03-algorithm-validation.md  04-state-of-art-review.md  05-cross-validation-testing.md  06-logging-infrastructure.md  07-prometheus-metrics.md  07-python-bindings.md  08-no-std-and-feature-gates.md  09-simd-vectorization.md  10-gpu-acceleration.md  11-hardware-sensor-plugins.md  12-comprehensive-test-coverage.md  13-pre-publication-preparation.md  14-initial-crates-io-publication.md  15-automated-release-pipeline.md  16-feature-flag-propagation.md  99-python-bindings.md  README.md
PRPs/orig/: 01-basic-kalman-filter.md  02-matrix-backends.md  03-expand-examples-applications.md  04-extended-kalman-filter.md  05-unscented-kalman-filter.md  06-advanced-kalman-variations.md  07-ensemble-kalman-filter.md  08-particle-filter.md  09-cubature-kalman-filter.md  10-information-filter.md  11-feature-compatibility-testing.md  12-rustdoc-documentation.md
benches/: kalman_benchmarks.rs
docs/: SOTA.md  VALIDATION.md
examples/: ckf_high_dimensional.rs  enkf_weather_model.rs  if_sensor_network.rs  kalman.cpp  logging_demo.rs  main.rs  metrics_server.rs  particle_filter_robot.rs  position_2d.rs  sensor_fusion.rs  simple_1d.rs  ukf_nonlinear_tracking.rs
src/: builder.rs  error.rs  extended.rs  filter.rs  legacy.rs  lib.rs  logging.rs  metrics.rs  scented.rs  types.rs  unscented.rs  validation.rs
src/builders/: ensemble.rs  extended.rs  information.rs  mod.rs  particle.rs  scented.rs  unscented.rs
src/ensemble/: filter.rs  mod.rs
src/information/: consensus.rs  conversion.rs  distributed.rs  extended.rs  filter.rs  mod.rs  sparse.rs
src/particle/: filter.rs  mod.rs
tests/: algorithm_validation.rs  builder_tests.rs  cross_validation.rs  information_tests.rs  quickcheck_invariants.rs  validation_tests.rs
