[package]
name = "kalman_filter"
version = "1.0.0-alpha0"
authors = ["Yu Jin <dedaluss@foxmail.com>", "Dennis E", "Claude AI Assistant"]
license = "MIT"
edition = "2021"
repository = "https://github.com/destenson/kalman-filter-rs"
description = "Comprehensive Kalman filter library with multiple variants (EKF, UKF, Information Filter, Particle Filter, etc.)"
keywords = ["kalman", "filter", "estimation", "tracking", "sensor-fusion"]
categories = ["algorithms", "mathematics", "science", "simulation"]


[features]
default = ["std"]
std = ["rand_distr/std","adskalman?/std"]
alloc = ["rand_distr/alloc"]
nalgebra = ["dep:nalgebra"]
opencv = ["dep:opencv"]
parallel = ["rayon"]
serde = ["dep:serde", "serde/derive"]
adskalman = ["dep:adskalman"]
legacy = []

[dependencies]
approx = "0.5"
num-traits = "0.2"
rand = "0.8"
rand_distr = { version = "0.4", default-features = false }
nalgebra = { version = "0.34.0", optional = true }
opencv = { version = "0.95.1", optional = true }
rayon = { version = "1.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
adskalman = { version = "0.17.0", optional = true }

[dev-dependencies]
criterion = "0.7.0"


[[bench]]
name = "kalman_benchmarks"
harness = false


[[example]]
path = "examples/main.rs"
name = "legacy"
required-features = ["legacy"]
